--- a/app/src/main/res/layout/lv_item.xml
+++ b/app/src/main/res/layout/lv_item.xml
@@ -18,7 +18,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp" />
 <LinearLayout
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
@@ -32,13 +32,13 @@
             android:text="Name" />
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/name1"
             android:layout_width="match_parent"
-            android:layout_height="110dp"
+            android:layout_height="32dp"
             android:gravity="center_vertical"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:paddingLeft="10dp"
-            android:text="Name" />
+            android:text="Address" />
 
 </LinearLayout>
     </LinearLayout>
