--- a/app/src/main/res/layout/lv_item.xml
+++ b/app/src/main/res/layout/lv_item.xml
@@ -25,6 +25,7 @@
         <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
+            android:layout_marginTop="8dp"
             android:layout_height="32dp"
             android:gravity="center_vertical"
             android:textAppearance="?android:attr/textAppearanceMedium"
