--- a/app/src/main/res/layout/lv_item.xml
+++ b/app/src/main/res/layout/lv_item.xml
@@ -33,7 +33,7 @@
             android:text="Name" />
 
         <TextView
-            android:id="@+id/name1"
+            android:id="@+id/address"
             android:layout_width="match_parent"
             android:layout_height="32dp"
             android:gravity="center_vertical"
