--- a/app/src/main/res/layout/activity_res_details.xml
+++ b/app/src/main/res/layout/activity_res_details.xml
@@ -1,24 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ResDetails">
+    tools:context=".ResDetails"
+    android:orientation="vertical">
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginTop="120dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    >
+
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=" Join Table"
-        tools:layout_editor_absoluteX="57dp"
-        tools:layout_editor_absoluteY="125dp" />
+        android:layout_weight="1"/>
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Create Table"
-        tools:layout_editor_absoluteX="217dp"
-        tools:layout_editor_absoluteY="125dp" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_weight="1"/>
+
+
+
+
+</LinearLayout>
+
+</LinearLayout>
