--- a/app/src/main/res/layout/activity_res_details.xml
+++ b/app/src/main/res/layout/activity_res_details.xml
@@ -18,14 +18,14 @@
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/join"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=" Join Table"
         android:layout_weight="1"/>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Create Table"
