--- a/app/src/main/res/layout/activity_table_menu.xml
+++ b/app/src/main/res/layout/activity_table_menu.xml
@@ -10,28 +10,27 @@
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="279dp"
-        android:layout_height="18dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-        tools:layout_editor_absoluteX="8dp" />
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:background="#d9d9d9"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="8dp"
         >
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:layout_weight="4">
+            android:layout_weight="2">
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="16dp"
                 android:text="TABLE CODE: " />
 
             <TextView
@@ -39,14 +38,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="16dp"
                 android:text="zxxz"/>
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1">
 
             <TextView
@@ -67,14 +65,10 @@
 
     <ListView
         android:id="@+id/list_view_menu"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         android:layout_width="383dp"
         android:layout_height="441dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        app:layout_constraintVertical_bias="1.0" />
+        android:layout_marginTop="16dp" />
 
 </LinearLayout>
