--- a/app/src/main/res/layout/menu_item_layout.xml
+++ b/app/src/main/res/layout/menu_item_layout.xml
@@ -3,41 +3,43 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1">
-<LinearLayout
-    android:layout_width="wrap_content"
+
+    <LinearLayout
+    android:layout_width="0dp"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:layout_weight="2">
+    android:layout_weight="1">
 
     <TextView
         android:id="@+id/text_view_menu_item_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Textview" />
-</LinearLayout>
+
+    </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:layout_weight="2">
+        android:layout_weight="1">
 
         <TextView
             android:id="@+id/text_view_menu_item_price"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="TextView"
             />
+    </LinearLayout>
 
-</LinearLayout>
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         android:layout_weight="1">
 
@@ -52,7 +54,6 @@
             android:id="@+id/button3"
             android:layout_width="10dp"
             android:layout_height="20dp"
-            android:layout_marginLeft="8dp"
             android:layout_weight="1"
             />
     </LinearLayout>
